Fix the color of field section labels for diffs in dark mode.
The Diff Revision, Commits, and Files section headers in the diff viewer
page had a dark grey background, which conflicted with the background
and didn't match the styling of the rest of the page.

We unfortunately don't have any standard classes for these that we can
depend on. This should be addressed, but not for this release, as it'd
introduce too many structural changes that aren't worth fixing up right
now.

In the meantime, we're now referencing the field label styling via CSS
variables. We're also using the proper font size for section labels,
which is smaller than we had before, but more consistent with the rest
of the page.

Testing Done:
Tested the review request and diff viewer pages in light and dark mode,
and compared the styling to the other section headers.

Reviewed at https://reviews.reviewboard.org/r/13823/

--- a/reviewboard/static/rb/css/pages/diffviewer.less
+++ b/reviewboard/static/rb/css/pages/diffviewer.less
@@ -1311,6 +1311,7 @@ table.rb-c-diff-file-index {
     &.diff-file-info {
       padding-left: 0.3em;
       white-space: nowrap;
+      vertical-align: middle;
       width: 30%;
 
       .diff-file-rename {
@@ -1428,8 +1429,6 @@ table.rb-c-diff-file-index {
   }
 
   #diff_revision_label h1 {
-    color: @review-request-label-color;
-    font-size: 120%;
     margin: 0;
     padding: 0;
   }
@@ -1443,9 +1442,18 @@ table.rb-c-diff-file-index {
     }
   }
 
+  /*
+   * XXX This should be replaced by rb-c-review-request-fieldset usage, or
+   *     similar.
+   */
+  #diff_revision_label h1,
   .section-header-label {
-    color: @review-request-label-color;
-    font-size: 120%;
+    color: var(--rb-p-review-request-field-label-color);
+    font-size: @review-request-section-label-font-size;
+    font-weight: bold;
+  }
+
+  .section-header-label {
     margin: 1em 0;
     padding: 1em 0 0 0;
   }
